Added cd api interface