@@ -2,39 +2,40 @@ package uk.gov.hmcts.reform.iacaseapi.fixtures.documents;
 
 import com.google.common.io.ByteStreams;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
+import uk.gov.hmcts.reform.ccd.document.am.model.DocumentUploadRequest;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.iacaseapi.domain.UserDetailsProvider;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.UserDetails;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.Document;
+import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.CcdCaseDocumentAmClient;
 
 @Service
 public class DocumentManagementUploader implements DocumentUploader {
 
-    private final CaseDocumentClient documentUploadClient;
+    private final CcdCaseDocumentAmClient ccdCaseDocumentAmClient;
     private final AuthTokenGenerator serviceAuthorizationTokenGenerator;
     private final UserDetailsProvider userDetailsProvider;
 
     public DocumentManagementUploader(
-        CaseDocumentClient documentUploadClient,
+            CcdCaseDocumentAmClient ccdCaseDocumentAmClient,
         AuthTokenGenerator serviceAuthorizationTokenGenerator,
         @Qualifier("requestUser") UserDetailsProvider userDetailsProvider
     ) {
-        this.documentUploadClient = documentUploadClient;
+        this.ccdCaseDocumentAmClient = ccdCaseDocumentAmClient;
         this.serviceAuthorizationTokenGenerator = serviceAuthorizationTokenGenerator;
         this.userDetailsProvider = userDetailsProvider;
     }
 
     public Document upload(
-        Resource resource,
-        String contentType
+            Resource resource,
+            String contentType
     ) {
         final String serviceAuthorizationToken = serviceAuthorizationTokenGenerator.generate();
         final UserDetails userDetails = userDetailsProvider.getUserDetails();
@@ -43,37 +44,42 @@ public class DocumentManagementUploader implements DocumentUploader {
         try {
 
             MultipartFile file = new InMemoryMultipartFile(
-                resource.getFilename(),
-                resource.getFilename(),
-                contentType,
-                ByteStreams.toByteArray(resource.getInputStream())
+                    resource.getFilename(),
+                    resource.getFilename(),
+                    contentType,
+                    ByteStreams.toByteArray(resource.getInputStream())
             );
 
-            UploadResponse uploadResponse = documentUploadClient
-                    .uploadDocuments(
-                        accessToken,
-                        serviceAuthorizationToken,
-                        "Asylum",
-                        "IA",
-                        Collections.singletonList(file)
-                    );
+            DocumentUploadRequest uploadRequest = new DocumentUploadRequest(
+                    "PUBLIC",
+                    "Asylum",
+                    "IA",
+                    List.of(file));
+
+            UploadResponse uploadResponse =
+                    ccdCaseDocumentAmClient
+                            .uploadDocuments(
+                                    accessToken,
+                                    serviceAuthorizationToken,
+                                    uploadRequest
+                            );
 
             uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument =
-                uploadResponse
-                    .getDocuments()
-                    .get(0);
+                    uploadResponse
+                            .getDocuments()
+                            .get(0);
 
             return new Document(
-                uploadedDocument
-                    .links
-                    .self
-                    .href,
-                uploadedDocument
-                    .links
-                    .binary
-                    .href,
-                uploadedDocument
-                    .originalDocumentName
+                    uploadedDocument
+                            .links
+                            .self
+                            .href,
+                    uploadedDocument
+                            .links
+                            .binary
+                            .href,
+                    uploadedDocument
+                            .originalDocumentName
             );
 
         } catch (IOException e) {
